[package]
name = "winproxy"
version = "0.4.0"
edition = "2024"
description = "Change Windows system proxy settings"
categories = ["command-line-utilities"]
keywords = ["windows", "proxy"]
repository = "https://github.com/fhluo/winproxy"
license = "MIT"
include = ["src/*.rs"]

[dependencies]
windows-registry = "0.6"
clap = { version = "4.5", features = ["derive"] }
bitflags = "2.10"
windows-result = "0.4"
byteorder = "1.5"
thiserror = "2.0"
comfy-table = "7.2"
