[package]
name = "winproxy-cli"
version = "0.6.0"
edition = "2024"
description = "Change Windows system proxy settings"
categories = ["command-line-utilities"]
keywords = ["windows", "proxy"]
repository = "https://github.com/fhluo/winproxy"
readme = "../README.md"
license = "MIT"

[[bin]]
name = "winproxy"
path = "src/main.rs"

[dependencies]
winproxy = { path = "../winproxy" }
clap = { version = "4.6", features = ["derive"] }
comfy-table = "7.2"
